# poofmq

./: .env.example  .gitattributes  AGENTS.md  CLAUDE.md  Makefile  README.md  boost.json  composer.json  docker-compose.yml  nixpacks.toml  package-lock.json  phpunit.xml  railpack.json
.codex/: config.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  tests.yml
app/Http/Controllers/: DashboardController.php  ProjectController.php
app/Http/Middleware/: EnsureEmailIsVerified.php  HandleInertiaRequests.php
app/Http/Requests/: StoreDeveloperKeyRequest.php
app/Models/: User.php
app/Services/: DonationLedgerService.php  ObservabilityService.php  TurnstileService.php
bootstrap/: app.php
config/: fortify.php  services.php  topology.php
docs/: openapi-sdk-verification.md  quickstart.md
proto/poofmq/v1/: poofmq.proto
railway/: init-app.sh
resources/js/components/: app-header.tsx  app-logo.tsx  app-sidebar.tsx  developer-key-dialog.tsx  heading.tsx  input-error.tsx  (+5 more)
routes/: api-keys.php  api.php  projects.php  settings.php  web.php
scripts/: e2e-local.sh  smoke-production.sh
sdks/: README.md
sdks/node/: README.md  package-lock.json  package.json
sdks/python/: README.md  pyproject.toml
sdks/python/test/integration/: run.py
services/go-api/: .env.example  Dockerfile  go.mod  go.sum
tests/Browser/: HomePageBrowserTest.php  SprintSixDashboardBrowserTest.php
tests/Feature/: DashboardTest.php  DevelopersPageTest.php  EmailVerificationMiddlewareTest.php  TopologyConfigTest.php  TurnstileServiceTest.php
tests/Unit/: PoofmqProtoContractTest.php
(+57 files in other folders)
