[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poofmq"
version = "1.0.0"
description = "poofMQ Python SDK - push/pop queue client with optional client-side encryption"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "cryptography>=42",
  "pydantic>=2",
  "python-dateutil>=2.8.2",
  "typing-extensions>=4.7.1",
  "urllib3>=1.25.3,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = [".", "generated"]
include = ["poofmq*", "poofmq.*", "openapi_client*", "openapi_client.*"]

[tool.setuptools.package-data]
openapi_client = ["py.typed"]
